--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "types": ["@types/jest"]
-  },
+    "types": ["jest", "node"]
+    },
   "include": ["./src", "./jest-setup.ts"]
 }
