--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ranker-course",
+  "name": "ranker",
   "version": "0.0.1",
-  "description": "Make decisions with friends via ranked voting!",
+  "description": "",
   "main": "index.js",
   "workspaces": [
     "client",
@@ -17,8 +17,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JacobSNGoodwin/ranker.git"
+    "type": "git"
   },
   "keywords": [
     "ts",
@@ -26,12 +25,6 @@
     "nestjs",
     "socketjs"
   ],
-  "author": "Jacob Goodwin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JacobSNGoodwin/ranker/issues"
-  },
-  "homepage": "https://github.com/JacobSNGoodwin/ranker#readme",
   "devDependencies": {
     "@types/webpack": "^5.28.0",
     "concurrently": "^7.0.0",
