--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "client:dev": "npm run dev --workspace=client",
     "server:dev": "wait-on tcp:6379 && npm run start:dev --workspace=server",
     "start": "concurrently 'npm:docker:compose' 'npm:server:dev' 'npm:client:dev'",
+    "backend": "concurrently 'npm:docker:compose' 'npm:server:dev'",
     "storybook": "npm run storybook --workspace=client",
     "stop": "docker-compose down",
     "test": "echo \"Error: no test specified\" && exit 1"
